--- a/fetch-in-react/package.json
+++ b/fetch-in-react/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --mode=development"
+    "dev": "webpack serve --mode=development",
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "react": "^17.0.2",
